--- a/FAQ/Views/FAQ/Index.cshtml
+++ b/FAQ/Views/FAQ/Index.cshtml
@@ -4,36 +4,18 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>FAQ</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
-<table>
-    <tr>
-        <th>
-            Question
-        </th>
-        <th>
-            Answer
-        </th>
-        <th></th>
-    </tr>
-
+<ul>
 @foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Question)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Answer)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.FAQEntryId }) |
-            @Html.ActionLink("Details", "Details", new { id=item.FAQEntryId }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.FAQEntryId })
-        </td>
-    </tr>
-}
+    <li>
+        @Html.ActionLink(Html.DisplayFor(modelItem => item.Question).ToHtmlString(), "Details", new { id = item.FAQEntryId }) |
+        @Html.ActionLink("Edit", "Edit", new { id=item.FAQEntryId }) |
+        @Html.ActionLink("Delete", "Delete", new { id=item.FAQEntryId })
 
-</table>
+    </li>    
+}
+</ul>
