--- a/FAQ/Views/Shared/_Layout.cshtml
+++ b/FAQ/Views/Shared/_Layout.cshtml
@@ -20,6 +20,7 @@
                 <ul id="menu">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
+                    <li>@Html.ActionLink("FAQ", "Index", "FAQ")</li>
                 </ul>
             </nav>
         </header>
